<resources>
    <string name="nav_notes">Notes</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_deleted">Deleted</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_tags">Tags</string>
    <string name="nav_all_notes">All Notes</string>
    <string name="nav_notebooks">Notebooks</string>
    <string name="nav_your_notebooks">Your Notebooks</string>
    <string name="nav_folders">Folders</string>
    <string name="text_breadcrumb_separator"> \u003E </string>
    <string name="hint_note_title">Note Title</string>
    <string name="hint_folder_name">Folder Name</string>
    <string name="action_rename">Rename</string>
    <string name="preferences_header_general">General</string>
    <string name="preferences_theme_mode">Theme mode</string>
    <string name="preferences_theme_mode_dark">Dark</string>
    <string name="preferences_theme_mode_light">Light</string>
    <string name="preferences_theme_mode_system">Follow system</string>
    <string name="preferences_dark_theme_mode">Dark theme mode</string>
    <string name="preferences_theme_dark_mode_standard">Standard</string>
    <string name="preferences_theme_dark_mode_black">Black</string>
    <string name="preferences_color_scheme">Color scheme</string>
    <string name="preferences_color_scheme_blue">Blue</string>
    <string name="preferences_color_scheme_pink">Pink</string>
    <string name="preferences_color_scheme_green">Green</string>
    <string name="preferences_color_scheme_orange">Orange</string>
    <string name="preferences_color_scheme_purple">Purple</string>
    <string name="preferences_color_scheme_yellow">Yellow</string>
    <string name="preferences_color_scheme_red">Red</string>
    <string name="preferences_color_scheme_system">Follow system</string>
    <string name="preferences_header_view">View</string>
    <string name="preferences_header_view_notebook">Notebook</string>
    <string name="preferences_layout_mode">Layout mode</string>
    <string name="preferences_layout_mode_grid">Grid</string>
    <string name="preferences_layout_mode_list">List</string>
    <string name="preferences_sort_method">Sort by</string>
    <string name="preferences_sort_method_title_asc">Title (ascending)</string>
    <string name="preferences_sort_method_title_desc">Title (descending)</string>
    <string name="preferences_sort_method_created_asc">Date created (ascending)</string>
    <string name="preferences_sort_method_created_desc">Date created (descending)</string>
    <string name="preferences_sort_method_modified_asc">Date modified (ascending)</string>
    <string name="preferences_sort_method_modified_desc">Date modified (descending)</string>
    <string name="preferences_header_view_note_content">Note content</string>
    <string name="preferences_font_size">Text editor/view font size</string>
    <string name="preferences_font_size_default">Default</string>
    <string name="preferences_font_size_ten" translatable="false">10</string>
    <string name="preferences_font_size_fifteen" translatable="false">15</string>
    <string name="preferences_font_size_twenty" translatable="false">20</string>
    <string name="preferences_font_size_twentyfive" translatable="false">25</string>
    <string name="preferences_font_size_thirty" translatable="false">30</string>
    <string name="preferences_font_size_thirtyfive" translatable="false">35</string>
    <string name="preferences_font_size_forty" translatable="false">40</string>
    <string name="preferences_font_size_fortyfive" translatable="false">45</string>
    <string name="preferences_font_size_fifty" translatable="false">50</string>
    <string name="preferences_show_fab_change_mode">Edit/View note button position</string>
    <string name="preferences_fab">Floating button</string>
    <string name="preferences_top_bar">Top bar</string>
    <string name="preferences_default_editor_mode">Default editor mode</string>
    <string name="preferences_default_editor_mode_view">View mode</string>
    <string name="preferences_default_editor_mode_edit">Edit mode</string>
    <string name="preferences_show_date">Show date created/modified</string>
    <string name="preferences_date_format">Date format</string>
    <string name="preferences_time_format">Time format</string>
    <string name="preferences_header_other">Other</string>
    <string name="preferences_open_media_in">Open media in</string>
    <string name="preferences_open_media_in_internal">Internal player</string>
    <string name="preferences_open_media_in_external">External player</string>
    <string name="preferences_group_notes_without_notebook">Group notes which are not in any notebook</string>
    <string name="preferences_move_checked_items">Move (un)checked items in the lists</string>
    <string name="preferences_note_deletion_time">Delete notes in bin</string>
    <string name="preferences_note_deletion_time_instantly">Instantly</string>
    <string name="preferences_note_deletion_time_week">After 7 days</string>
    <string name="preferences_note_deletion_time_two_weeks">After 14 days</string>
    <string name="preferences_note_deletion_time_month">After 30 days</string>
    <string name="preferences_header_backup">Backup</string>
    <string name="preferences_create_backup">Create a backup</string>
    <string name="preferences_create_backup_subtext">Export all notes to a backup file.</string>
    <string name="preferences_restore">Restore</string>
    <string name="preferences_restore_subtext">Load notes from a backup file.</string>
    <string name="preferences_backup_strategy">Backup strategy for attachments</string>
    <string name="preferences_backup_strategy_include_files">Backup everything</string>
    <string name="preferences_backup_strategy_keep_info">Only backup description and local path</string>
    <string name="preferences_backup_strategy_keep_nothing">Do not backup attachments</string>
    <string name="preferences_header_syncing">Syncing</string>
    <string name="preferences_go_to_sync_settings">Go to sync settings</string>
    <string name="preferences_currently_syncing_with">Currently syncing with %s</string>
    <string name="preferences_currently_not_syncing">Currently not syncing</string>
    <string name="preferences_cloud_service">Syncing service</string>
    <string name="preferences_cloud_service_disabled">Disabled</string>
    <string name="preferences_cloud_service_nextcloud">Nextcloud</string>
    <string name="preferences_nextcloud_limited_features">Keep in mind Nextcloud Notes does not support features such as tags, attachments, reminders and more. Nextcloud Notes need to be installed on the Nextcloud Server or the Login will fail with "Something went wrong"!</string>
    <string name="preferences_nextcloud_account">Nextcloud account</string>
    <string name="preferences_nextcloud_instance_url">Nextcloud instance URL</string>
    <string name="preferences_nextcloud_set_your_credentials">Set your credentials</string>
    <string name="preferences_nextcloud_set_server_url">Set the server\'s URL</string>
    <string name="preferences_file_storage_info">Select a folder from local storage or from a cloud provider. All notes will be stored as Markdown files.</string>
    <string name="preferences_file_storage_location">Storage location</string>
    <string name="preferences_file_storage_select">Select Storage location</string>
    <string name="preferences_sync_on_wifi">Wi-Fi</string>
    <string name="preferences_sync_on_wifi_data">Wi-Fi or Data</string>
    <string name="preferences_sync_when_on">Sync when on</string>
    <string name="preferences_background_sync">Background syncing</string>
    <string name="preferences_background_sync_enabled">Enabled</string>
    <string name="preferences_background_sync_disabled">Disabled</string>
    <string name="preferences_new_notes_synchronizable">New notes synchronizable</string>
    <string name="preferences_trust_self_signed_certificate">Trust self-signed certificate</string>
    <string name="about_version">Version</string>
    <string name="about_website">Website</string>
    <string name="about_developer">Developer</string>
    <string name="about_contribute">Contribute</string>
    <string name="about_support">Support</string>
    <string name="about_send_logs">Send Error Logs</string>
    <string name="about_send_logs_subtext">Send the application logs to the developer for investigation</string>
    <string name="about_support_subtext">Creating and maintaining open-source projects is time-consuming and provides
        no profit.\nBuy the developers a coffee!
    </string>
    <string name="about_libraries">Libraries</string>
    <string name="about_libraries_subtext">View third-party libraries and licenses.</string>
    <string name="default_string">Default</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Okay</string>
    <string name="indicator_notes_empty">Your notes will appear here.</string>
    <string name="indicator_untitled">Untitled</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done!</string>
    <string name="action_delete_permanently">Delete permanently</string>
    <string name="action_select_all">Select All</string>
    <string name="action_create_list">Create a list</string>
    <string name="action_show_hidden_notes">Show hidden notes</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_export">Export</string>
    <string name="action_hide">Hide</string>
    <string name="action_show">Show</string>
    <string name="action_add">Add</string>
    <string name="action_archive">Archive</string>
    <string name="action_change_mode">Edit/View mode</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_restore">Restore</string>
    <string name="action_share">Share</string>
    <string name="action_pin_unpin">Pin / Unpin</string>
    <string name="action_move_to">Move to…</string>
    <string name="action_duplicate">Duplicate</string>
    <string name="action_select_more">Select more…</string>
    <string name="action_compact_preview">Compact preview</string>
    <string name="action_full_preview">Full preview</string>
    <string name="action_screen_always_on">Screen always on</string>
    <string name="attachments_edit_description">Edit description</string>
    <string name="attachments_hint_description">Attachment description</string>
    <string name="action_record_audio">Record audio</string>
    <string name="indicator_recording">Recording (%1$s)</string>
    <string name="action_attach_files">Attach files</string>
    <string name="action_take_photo">Take a photo</string>
    <string name="indicator_recorded_clip">Recorded Clip</string>
    <string name="default_notebook">Other</string>
    <string name="notebooks_new_notebook">New notebook</string>
    <string name="notebooks_hint_name">Notebook name</string>
    <string name="notebooks_unassigned">No Notebook</string>
    <string name="indicator_notebook_empty">You have no notebooks.</string>
    <string name="empty_state_no_folders">You have no folders.</string>
    <string name="action_create_notebook">Create a notebook</string>
    <string name="action_rename_notebook">Rename notebook</string>
    <string name="action_new_notebook">New notebook</string>
    <string name="indicator_notebook_already_exists">Notebook with name %1$s already exists.</string>
    <string name="indicator_archive_empty">Your archived notes will appear here.</string>
    <string name="action_empty_bin">Empty bin</string>
</resources>